# navet

./: .gitignore  .travis.yml  README.rst  setup.cfg
navet/: cli.py  navet.py
tests/: test_cli_version.py
