
[metadata]
name = navet
version = 0.1.0
description = Migration tool from MediaMarker to the other booklog service
long_description = file: README.rst, LICENSE
author = Norio Kimura
author_email = kimura@monad.tv
url = https://github.com/norioxkimura/navet
license = MIT

[options]
packages = find:
zip_safe = False
install_requires =
    click
python_requires = >= 2.7, < 3.0

[options.entry_points]
console_scripts =
    navet = navet.cli:navet

[options.extras_require]
dev =
    pytest
    tox

[tox:tox]
envlist = py27

[testenv]
deps = pytest
commands =
    pytest

